Ash magnifier: Check whether the caret bounds were actually moved or not.

If the caret bounds were not actually moved, do not move the magnification
window. Otherwise it causes unnecessary move of focuses.

BUG=673200
TEST=MagnificationControllerTest

Review-Url: https://codereview.chromium.org/2562273002
Cr-Commit-Position: refs/heads/master@{#438347}

Former-commit-id: c0105686d120fe7978122cf399061c738de15134